# yep-hackathon

./: .gitignore  README.md  conftest.py  debug_court_trimmed.py  extract_frames.py  main.py  pyproject.toml  selected_players.json  selective_tracking_data.json  test_terminal_selection.json  yolov12.py
.agent-execution/: project_context.md
.agent-execution/enhanced_player_tracking/document/: 00_overall_plan.md  01_color_histogram_extractor__owner_coding_agent.md  02_enhanced_tracker__owner_coding_agent.md
.agent-execution/enhanced_player_tracking/log/: execution__01_color_histogram_extractor__owner_coding_agent.md  execution__02_enhanced_tracker__owner_coding_agent.md
.agent-execution/interactive_player_tracking/document/: 00_overall_plan.md  01_player_selector_gui__owner_coding_agent.md  02_player_selector_terminal__owner_coding_agent.md  (+3 more)
.agent/rules/: coding-rule.md
app/service/: color_histogram.py  court_coordinates.json  court_cropper.py  court_transform.py  extract_court_coordinates.py  named_video_cropper.py  person_tracker.py  player_selector_gui.py  player_selector_terminal.py  selective_tracker.py  track_player.py  video_cropper.py
output/: selected_players.json  selective_tracking_data.json
pickleball_advice/: README.md  analysis.json  cost_log.json  dictionary_official.json  main.py  pickleball_data.json  yolov12.py
tests/: dummy_selective_tracking.json  test_color_histogram.py  test_court_transform.py  test_named_video_cropper.py  test_player_selector_gui.py  test_player_selector_terminal.py  test_selective_tracker.py  test_track_player.py
(+1041 files in other folders)
