[project]
name = "yep-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "openai>=2.15.0",
    "opencv-python>=4.8.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.1",
    "ultralytics>=8.4.2",
]
